--- a/epaint/Cargo.toml
+++ b/epaint/Cargo.toml
@@ -71,6 +71,7 @@ web-sys = { version = "0.3.52", optional = true, features = [
   "Document",
   "Element",
   "HtmlCanvasElement",
+  "TextMetrics",
   "Window",
 ] }
 
