--- a/epaint/Cargo.toml
+++ b/epaint/Cargo.toml
@@ -41,7 +41,7 @@ extra_debug_asserts = ["emath/extra_debug_asserts"]
 # Always enable additional checks.
 extra_asserts = ["emath/extra_asserts"]
 
-# Add compatibility with https://github.com/kvark/mint
+# Add compatability with https://github.com/kvark/mint
 mint = ["emath/mint"]
 
 # Allow using native fonts (currently web-only)
